--- a/test-1.html
+++ b/test-1.html
@@ -779,7 +779,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 <div class="intro-section" style="max-width: 900px; margin: 0 auto 20px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="background-color: #f8faff; padding: 40px 30px; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 20px rgba(0,0,0,0.02); margin-bottom: 40px; box-sizing: border-box;">
     <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 30px;">
-      <div style="width: 6px; height: 32px; background-color: #0c2340; border-radius: 10px;"></div>
+      <div style="width: 6px; height: 32px; background-color: #c98a2e; border-radius: 10px;"></div>
       <h2 style="font-size: 24px; color: #0c2340; margin: 0; font-weight: 800; letter-spacing: 1px; text-transform: uppercase;">oshua's Process & Progress</h2>
     </div>
       
