--- a/test-1.html
+++ b/test-1.html
@@ -889,9 +889,11 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
 <div class="intro-section" style="max-width: 900px; margin: 0 auto 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="background-color: #f8faff; padding: 40px 30px; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 20px rgba(0,0,0,0.02); margin-bottom: 40px; box-sizing: border-box;">
-    <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 5px;">
-      <div style="width: 6px; height: 32px; background-color: #c98a2e; border-radius: 10px;"></div>
-      <h2 style="font-size: 24px; color: #0c2340; margin: 0; font-weight: 800; letter-spacing: 1px; text-transform: uppercase;">Present Process & Progress</h2>
+    <div style="margin-bottom: 5px; box-sizing: border-box;">
+      <h2 style="font-size: 24px; color: #0c2340; margin: 0; border-left: 5px solid #f15a22; padding-left: 20px; font-weight: 800; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
+        Present Process & Progress
+      </h2>
     </div>
   </div>
 </div>
@@ -901,7 +903,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
     
     <div class="joshua-unique-card card-spring">
       <div>
-        <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 25px;">
+        <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 15px;">
           <div style="display: flex; align-items: center;">
             <div style="background: rgba(201,138,46,0.15); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(201,138,46,0.4);">
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#c98a2e" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
@@ -1026,7 +1028,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 
   
 <div class="intro-section" style="max-width: 900px; margin: 0 auto 20px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="background-color: #f8faff; padding: 40px 30px; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 20px rgba(0,0,0,0.02); margin-bottom: 40px; box-sizing: border-box;">
+  <div style="background-color: #f8faff; padding: 20px 30px; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 20px rgba(0,0,0,0.02); margin-bottom: 20px; box-sizing: border-box;">
     <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 30px;">
       <div style="width: 6px; height: 32px; background-color: #0c2340; border-radius: 10px;"></div>
       <h2 style="font-size: 26px; color: #0c2340; margin: 0; font-weight: 800; letter-spacing: 1px; text-transform: uppercase;">Introduction</h2>
