--- a/test-1.html
+++ b/test-1.html
@@ -887,8 +887,8 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   </style>
 
 
-<div class="intro-section" style="max-width: 900px; margin: 0 auto 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="background-color: #f8faff; padding: 40px 30px; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 20px rgba(0,0,0,0.02); margin-bottom: 40px; box-sizing: border-box;">
+<div class="intro-section" style="max-width: 900px; margin: 0 auto 5px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="background-color: #f8faff; padding: 20px 30px 5px 30px; border-radius: 25px; border: 1px solid #e2e8f0; box-shadow: 0 10px 20px rgba(0,0,0,0.02); margin-bottom: 5px; box-sizing: border-box;">
     <div style="margin-bottom: 5px; box-sizing: border-box;">
       <h2 style="font-size: 24px; color: #0c2340; margin: 0; border-left: 5px solid #f15a22; padding-left: 20px; font-weight: 800; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path><path d="M22 12A10 10 0 0 0 12 2v10z"></path></svg>
