--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
     
 <div class="intro-section" style="width: 100%; margin-bottom: 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="margin-bottom: 25px; box-sizing: border-box;">
-    <h2 style="font-size: 18px; color: #c98a2e; margin: 0; border-left: 5px solid #f15a22; padding-left: 20px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+    <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #c98a2e; padding-left: 20px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
         <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
         <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
