--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1477,13 +1477,15 @@
   </style>
  
  
-<div style="width: 100%; max-width: 900px; margin: 0 auto 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="background: #F15A22; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
+<div style="width: 100%; max-width: 900px; margin: 0 auto 40px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="background: #F15A22; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box; flex-wrap: wrap; gap: 10px;">
     <div style="display: flex; align-items: center;">
       <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Key Metrics</span>
       <span style="margin-left: 15px; background: #0C2340; color: #ffffff; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">Clippd W</span>
+      <span style="margin-left: 12px; color: rgba(255,255,255,0.7); font-size: 11px; font-weight: 600; letter-spacing: 0.3px;">Last Updated: Feb. 4, 2026</span>
     </div>
   </div>
+</div>
 
   <div class="master-container" style="width: 100%; margin-top: 25px; box-sizing: border-box;">
 
