--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1477,17 +1477,28 @@
   </style>
  
  
-<div style="width: 100%; max-width: 900px; margin: 0 auto 10px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="background: #F15A22; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box;">
+
+  <div style="width: 100%; max-width: 900px; margin: 0 auto 40px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div style="background: #F15A22; border-radius: 8px 8px 0 0; padding: 18px 25px; display: flex; justify-content: space-between; align-items: center; box-sizing: border-box; flex-wrap: wrap; gap: 10px;">
     <div style="display: flex; align-items: center;">
-      <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Key Metrics</span>
-      <span style="margin-left: 15px; background: #0C2340; color: #ffffff; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">Clippd W</span>
-    </div>
-  </div>
+  <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Key Metrics</span>
+  <span style="margin-left: 15px; background: #0C2340; color: #ffffff; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">Clippd W</span>
+  <span style="margin-left: 12px; color: rgba(255,255,255,0.7); font-size: 11px; font-weight: 600; letter-spacing: 0.3px;">Last Updated: Feb. 4, 2026</span>
+</div>
+
+<a href="https://www.joshuahonggolf.com/ncaa-stats.html" style="text-decoration: none; display: flex; align-items: center; gap: 6px; background: rgba(255,255,255,0.15); padding: 6px 12px; border-radius: 6px; transition: all 0.2s ease;">
+  <span style="color: #ffffff; font-size: 12px; font-weight: 700; letter-spacing: 0.5px;">See Detail</span>
+  <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+    <polyline points="15 3 21 3 21 9"></polyline>
+    <line x1="10" y1="14" x2="21" y2="3"></line>
+  </svg>
+</a>
+</div>
 
   <div class="master-container" style="width: 100%; margin-top: 25px; box-sizing: border-box;">
 
-    <div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
+<div class="roster-standings-section" style="width: 100%; margin-bottom: 40px; box-sizing: border-box;">
       <div style="margin-bottom: 25px; box-sizing: border-box;">
         <h3 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #806600; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path><path d="M4 22h16"></path><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path><path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path></svg>
@@ -1621,9 +1632,10 @@ async function updateMetrics() {
 window.addEventListener('DOMContentLoaded', updateMetrics);
 </script>
 
-  
-  </div>
+   </div>
 </div>
+
+  
 
 
 
