--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -341,13 +341,18 @@
     }
   </style>
 
-  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 10px; text-align: center;">
-    <h1 style="margin: 0; color: #0c2340; font-size: 22px; letter-spacing: 1px; font-weight: 900; text-transform: uppercase;">
-      ACTIVE SEASON LOG & METRICS
-    </h1>
-  </div>
-    <div id="Tournament-Schedule-Scoring" style="padding-top: 5px;">
-    </div>
+  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 15px; margin-bottom: 20px; display: flex; justify-content: space-between; align-items: flex-end; box-sizing: border-box;">
+  <h1 style="margin: 0; color: #0c2340; font-size: 22px; letter-spacing: 1px; font-weight: 900; text-transform: uppercase; line-height: 1;">
+    ACTIVE SEASON LOG & METRICS
+  </h1>
+  
+  <span style="color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.5px; padding-bottom: 2px;">
+    Last Updated: Feb 16, 2026
+  </span>
+</div>
+
+<div id="Tournament-Schedule-Scoring" style="padding-top: 5px;">
+</div>
 
 
   <div id="joshua-qualifier-section" style="width: 100%; max-width: 900px; margin: 10px auto; padding: 0; font-family: 'Oswald', sans-serif; box-sizing: border-box; clear: both;">
@@ -753,9 +758,6 @@
       <h2 style="color: #0c2340; border-left: 6px solid #2e7d32; padding-left: 15px; font-size: 22px; margin: 0; font-weight: 800;">
         2026 NCAA Spring Season <span style="font-weight: 400; font-size: 16px; color: #2e7d32;">(Scheduled)</span>
       </h2>
-      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">
-        Last Updated: Feb. 4, 2026
-      </div>
     </div>
 
     <div style="border-radius: 15px; border: 1px solid #e2e8f0; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.05);">
@@ -1484,8 +1486,7 @@
     <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Key Metrics</span>
     <span style="margin-left: 15px; background: #0C2340; color: #ffffff; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">Clippd W</span>
   </div>
-  
-  <span style="color: rgba(255,255,255,0.7); font-size: 11px; font-weight: 600; letter-spacing: 0.3px;">Last Updated: Feb. 4, 2026</span>
+ 
 </div>
 
   <div class="master-container" style="width: 100%; margin-top: 25px; box-sizing: border-box;">
@@ -1645,7 +1646,6 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       </div>
     </div>
     <div style="text-align: right; padding: 10px 0 0 0; margin-top: 0; box-sizing: border-box; width: 100%;">
-      <span style="font-size: 11px; color: #94a3b8; font-weight: 700; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Feb. 11, 2026</span>
     </div>
   </div>
 
