--- a/index.html
+++ b/index.html
@@ -406,11 +406,18 @@ gtag('config', 'G-H1JW8YBDZ8');
     }
   </style>
 
-  <div style="margin-bottom: 25px; display: flex; align-items: center; justify-content: center; gap: 20px; width: 100%;">
-    <div style="flex-grow: 1; height: 1px; background: #edf2f7;"></div>
-    <h2 style="margin: 0; color: #c98a2e; font-size: 24px; font-weight: 900; letter-spacing: -0.5px; text-transform: uppercase;">On-going Activity</h2>
+ <div class="ongoing-header-wrapper" style="margin-bottom: 25px; display: flex; align-items: center; justify-content: space-between; gap: 20px; width: 100%; box-sizing: border-box;">
+  <div style="display: flex; align-items: center; gap: 20px; flex-grow: 1;">
+    <h2 style="margin: 0; color: #c98a2e; font-size: 24px; font-weight: 900; letter-spacing: -0.5px; text-transform: uppercase; white-space: nowrap;">
+      On-going Activity
+    </h2>
     <div style="flex-grow: 1; height: 1px; background: #edf2f7;"></div>
   </div>
+  
+  <div style="flex-shrink: 0; color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7;">
+    Last Updated: Feb. 16, 2026
+  </div>
+</div>
 
   <div class="activity-card">
     <div class="activity-card-inner" style="padding: 20px 30px; display: flex; align-items: center; justify-content: space-between; gap: 20px;">
@@ -623,7 +630,6 @@ gtag('config', 'G-H1JW8YBDZ8');
     <div style="display: flex; align-items: center;">
   <span style="color: #ffffff; font-weight: 800; font-size: 16px; letter-spacing: 1px;">Freshman Season Key Metrics</span>
   <span style="margin-left: 15px; background: #0C2340; color: #ffffff; font-size: 11px; font-weight: 700; padding: 2px 8px; border-radius: 4px; letter-spacing: 0.5px;">Clippd W</span>
-  <span style="margin-left: 12px; color: rgba(255,255,255,0.7); font-size: 11px; font-weight: 600; letter-spacing: 0.3px;">Last Updated: Feb. 4, 2026</span>
 </div>
 
 <a href="https://www.joshuahonggolf.com/ncaa-stats.html" style="text-decoration: none; display: flex; align-items: center; gap: 6px; background: rgba(255,255,255,0.15); padding: 6px 12px; border-radius: 6px; transition: all 0.2s ease;">
@@ -932,7 +938,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Preparation continues with ongoing driver accuracy calibration.</p>
         </div>
       </div>
-      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">LAST UPDATED: FEB 4, 2026</div>
+      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">Posted on: Feb 4, 2026</div>
     </div>
 
     <div class="joshua-unique-card card-winter">
@@ -958,7 +964,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <p style="margin-bottom: 0; color: #fff; font-weight: 600;">Preparation continues with the goal of entering the Spring season fully calibrated and ready to contribute consistently across all competitive rounds.</p>
         </div>
       </div>
-      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">LAST UPDATED: JAN 26, 2026</div>
+      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">Posted on: JAN 26, 2026</div>
     </div>
 
     <div class="joshua-unique-card card-fall">
@@ -977,7 +983,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <p style="margin-bottom: 0;">This period was used to address identified technical areas prior to Spring qualifying rounds and subsequent team events. Joshua continues preparation within the UTSA program for the Spring season.</p>
         </div>
       </div>
-      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">DATA RECORDED: DEC 2025</div>
+      <div style="text-align: right; font-size: 11px; color: #444; font-weight: 700; margin-top: 10px;">Posted on: DEC 2025</div>
     </div>
 
   </div>
