--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ gtag('config', 'G-H1JW8YBDZ8');
 </div>
 
 <a href="https://www.joshuahonggolf.com/ncaa-stats.html" style="text-decoration: none; display: flex; align-items: center; gap: 6px; background: rgba(255,255,255,0.15); padding: 6px 12px; border-radius: 6px; transition: all 0.2s ease;">
-  <span style="color: #ffffff; font-size: 12px; font-weight: 700; letter-spacing: 0.5px;">See Detail</span>
+  <span style="color: #ffffff; font-size: 12px; font-weight: 700; letter-spacing: 0.5px;">See more</span>
   <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
     <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
     <polyline points="15 3 21 3 21 9"></polyline>
