--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -341,13 +341,13 @@
     }
   </style>
 
-  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 15px; margin-bottom: 20px; display: flex; justify-content: space-between; align-items: flex-end; box-sizing: border-box;">
-  <h1 style="margin: 0; color: #0c2340; font-size: 22px; letter-spacing: 1px; font-weight: 900; text-transform: uppercase; line-height: 1;">
+<div style="border-bottom: 2px solid #0c2340; padding-bottom: 15px; margin-bottom: 20px; display: flex; justify-content: space-between; align-items: flex-end; flex-wrap: wrap; gap: 10px; box-sizing: border-box;">
+  <h1 style="margin: 0; color: #0c2340; font-size: 22px; letter-spacing: 1px; font-weight: 900; text-transform: uppercase; line-height: 1.2; min-width: 200px;">
     ACTIVE SEASON LOG & METRICS
   </h1>
   
-  <span style="color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.5px; padding-bottom: 2px;">
-    Last Updated: Feb 16, 2026
+  <span style="color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.5px; padding-bottom: 2px; white-space: nowrap;">
+    Last Updated: Feb 17, 2026
   </span>
 </div>
 
