--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -432,14 +432,16 @@
             </tr>
             <tr style="border-bottom: 1px solid #eee; background: rgba(0, 0, 0, 0.02);">
               <td style="padding: 12px; border-right: 1px solid #eee; color: #aaa;">Feb 12, 2026</td>
-              <td style="padding: 12px; border-right: 1px solid #eee; color: #aaa;">The Canyons Course</td>
-              <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 600; color: #ccc; font-family: 'Oswald', sans-serif; font-size: 1.15em;">67</td>
-              <td style="padding: 12px; color: #ccc; font-weight: 600; font-size: 1.1em;">-5</td>
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
+                font-family: 'Oswald', sans-serif; font-size: 1.15em;">67</td>
+              <td style="padding: 12px; color: #E31837; font-weight: 700; font-size: 1.1em;">-5</td>
             </tr>
             
             <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Feb 10, 2026</td>
               <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
-                font-family: 'Oswald', sans-serif; font-size: 1.15em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 700; font-size: 1.1em;">-4</td></tr>
+                font-family: 'Oswald', sans-serif; font-size: 1.15em;">68</td>
+              <td style="padding: 12px; color: #E31837; font-weight: 700; font-size: 1.1em;">-4</td>
+            </tr>
             
             <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Jan 22, 2026</td>
               <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
