--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -424,7 +424,7 @@
             </tr>
           </thead>
        <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
-           <tr style="border-bottom: 2px solid #0c2340; background: #fffaf0;">
+           <tr style="background: #fffaf0;">
               <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color: #0c2340;">Feb 17, 2026</td>
               <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color: #0c2340;">The Canyons Course</td>
               <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color: #f15a22; font-family: 'Oswald', sans-serif; font-size: 1.15em;">TBD</td>
