--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -427,18 +427,20 @@
            <tr style="background: #fffaf0;">
               <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color: #0c2340;">Feb 17, 2026</td>
               <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color: #0c2340;">The Canyons Course</td>
-              <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color: #f15a22; font-family: 'Oswald', sans-serif; font-size: 1.15em;">TBD</td>
-              <td style="padding: 12px; color: #f15a22; font-weight: 800; font-size: 1.1em;">In Progress</td>
+              <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 800; color:  #0c2340; font-family: 'Oswald', sans-serif; font-size: 1.15em;">TBD</td>
+              <td style="padding: 12px; color:  #0c2340; font-weight: 800; font-size: 1.1em;">In Progress</td>
             </tr>
             <tr style="border-bottom: 1px solid #eee; background: rgba(0, 0, 0, 0.02);">
               <td style="padding: 12px; border-right: 1px solid #eee; color: #aaa;">Feb 12, 2026</td>
-              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
+              <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
                 font-family: 'Oswald', sans-serif; font-size: 1.15em;">67</td>
               <td style="padding: 12px; color: #E31837; font-weight: 700; font-size: 1.1em;">-5</td>
             </tr>
             
             <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Feb 10, 2026</td>
-              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td>
+              <td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
                 font-family: 'Oswald', sans-serif; font-size: 1.15em;">68</td>
               <td style="padding: 12px; color: #E31837; font-weight: 700; font-size: 1.1em;">-4</td>
             </tr>
