--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -520,7 +520,7 @@
             </div>
 
   <h3 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 900; text-transform: uppercase; border-bottom: 3px solid #0c2340; display: table; line-height: 1.4; box-sizing: border-box; letter-spacing: 0.5px; padding-bottom: 5px;">
-    Technical Analysis & Training Progression
+    Technical Log
   </h3>
 </div>
 
