--- a/test-1.html
+++ b/test-1.html
@@ -481,12 +481,15 @@ gtag('config', 'G-H1JW8YBDZ8');
         <span style="width: 6px; height: 6px; background: #ffffff; border-radius: 50%;"></span>
         CURRENT FOCUS
       </div>
-      <div style="display: flex; flex-direction: column; gap: 4px;">
-        <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px;">
-          February Qualifiers: scoring variance review and dispersion control.
+      <div style="display: flex; flex-direction: column; gap: 8px;">
+        <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4;">
+          February Qualifiers: Completion of qualifying rounds and documentation of spring scoring metrics.
         </div>
-        <div style="color: #64748b; font-size: 14px; font-weight: 600;">
-          Technical sessions and academic scheduling in place.
+        <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4;">
+          Upcoming Competition: Preparation for the Military City Collegiate.
+        </div>
+        <div style="color: #64748b; font-size: 14px; font-weight: 600; line-height: 1.4;">
+          Current Academic & Physical Focus: Coursework and recovery protocols aligned with back-to-back tournament scheduling.
         </div>
       </div>
     </div>
@@ -496,7 +499,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       </svg>
     </div>
   </a>
-
+     
 </div>
 
     
