--- a/test-2.html
+++ b/test-2.html
@@ -515,12 +515,12 @@
            <div style="margin-bottom: 45px; position: relative; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
               <div id="Current-Focus" style="margin-bottom: 8px; box-sizing: border-box;">
                   <span style="font-size: 13px; color: #d32f2f; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px;">
-                      Posted: Feb 11, 2026
+                      Posted: Feb 17, 2026
                   </span>
             </div>
 
   <h3 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 900; text-transform: uppercase; border-bottom: 3px solid #0c2340; display: table; line-height: 1.4; box-sizing: border-box; letter-spacing: 0.5px; padding-bottom: 5px;">
-    Technical Log
+    Technical Log (Updated: Feb. 17, 2026)
   </h3>
 </div>
 
@@ -528,10 +528,10 @@
                 <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box;">
                     <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-sizing: border-box;">01.</span>
                     <div style="box-sizing: border-box;">
-                        <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Strategic Assessment</h4>
+                        <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Technical & Strategic Notes</h4>
                         <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
-                            <strong>Current State:</strong> Post-competition review indicates stable ball-speed output. Ongoing evaluation of scoring margin management during qualifying rounds. <br>
-                            <strong>Technical:</strong> Long-iron trajectory and dispersion calibration sessions with <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline; font-weight: 700;">Coach Bryan Gathright</a> remain active.
+                            <strong>Ball Striking:</strong> Driver and long-iron dispersion patterns reviewed following recent technical sessions. Trajectory consistency and scoring distribution trends documented during qualifying rounds. <br>
+                            <strong>Short Game:</strong> Greenside and scrambling sessions recorded. Distance control and contact consistency tracked through structured practice metrics.
                         </p>
                     </div>
                 </div>
@@ -539,10 +539,10 @@
                 <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box;">
                     <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-sizing: border-box;">02.</span>
                     <div style="box-sizing: border-box;">
-                        <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Conditioning Protocol</h4>
+                        <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Conditioning & Academic Status</h4>
                         <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
-                            <strong>Physical:</strong> Heavy resistance training protocols have been reduced during the current technical recalibration phase. Conditioning focus shifted toward mobility and rotational stability. <br>
-                            <strong>Academic:</strong> Coursework scheduling remains aligned with February competition dates.
+                            <strong>Physical:</strong> Mobility and rotational stability sessions maintained. Training load adjusted to align with consecutive competition scheduling. Heavy resistance protocols not utilized during the current tournament phase. <br>
+                            <strong>Academic:</strong> Coursework and project timelines organized in advance to prevent overlap during consecutive February–March tournament travel. Academic progression remains on schedule in accordance with NCAA eligibility requirements.
                         </p>
                     </div>
                 </div>
@@ -557,16 +557,18 @@
                 </div>
                 
                 <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 1px solid #f1f5f9; padding-bottom: 10px; margin-bottom: 12px; box-sizing: border-box;">
-                    <h5 style="margin: 0; font-size: 14px; color: #d32f2f; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">Next Event Focus & Updates</h5>
-                    <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; box-sizing: border-box;">Home Field Qualifying — Technical Memo</span>
+                    <h5 style="margin: 0; font-size: 14px; color: #d32f2f; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">Upcoming Competition Focus</h5>
+                    <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; box-sizing: border-box;">Tournament Prep — Technical Memo</span>
                 </div>
                 <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                        • Round 2: Scoring margin management under qualifying conditions.<br>
+                        • Military City Collegiate (Feb 23–24, TPC San Antonio)<br>
+                        • March Event (Mar 2–3, 4-day interval)<br>
+                        • Course Preparation: Home-course management patterns reviewed.
                     </p>
                     <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                        • Recovery: Mobility and range-of-motion emphasis.<br>
-                        • Scoring Reference: Controlled execution relative to course par.
+                        • Competition Scheduling: Practice and recovery structured for continuity.<br>
+                        • Performance: Strategic decision-making reviewed in advance.
                     </p>
                 </div>
             </div>
@@ -577,6 +579,7 @@
             </div>
         </div>
     </div>
+
 
 
   
