--- a/test-1.html
+++ b/test-1.html
@@ -475,30 +475,32 @@ gtag('config', 'G-H1JW8YBDZ8');
     </div>
   </div>
 
-  <a href="ncaa-stats.html#Current-Focus" class="focus-container">
-    <div style="display: flex; align-items: flex-start; gap: 20px; flex: 1;">
-      <div class="focus-badge" style="margin-top: 2px;">
-        <span style="width: 6px; height: 6px; background: #ffffff; border-radius: 50%;"></span>
-        CURRENT FOCUS
+  <a href="ncaa-stats.html#Current-Focus" class="focus-container" style="display: flex; align-items: center; justify-content: space-between; gap: 20px; text-decoration: none; box-sizing: border-box; flex-wrap: wrap;">
+    <div style="display: flex; align-items: flex-start; gap: 20px; flex: 1; min-width: 280px; flex-wrap: wrap; box-sizing: border-box;">
+      <div class="focus-badge" style="margin-top: 2px; flex-shrink: 0; box-sizing: border-box;">
+        <span style="width: 6px; height: 6px; background: #ffffff; border-radius: 50%; display: inline-block; vertical-align: middle;"></span>
+        <span style="vertical-align: middle;">CURRENT FOCUS</span>
       </div>
-      <div style="display: flex; flex-direction: column; gap: 8px;">
-        <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4;">
+      
+      <div style="display: flex; flex-direction: column; gap: 10px; flex: 1; min-width: 260px; box-sizing: border-box;">
+        <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.5;">
           February Qualifiers: Completion of qualifying rounds and documentation of spring scoring metrics.
         </div>
-        <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.4;">
+        <div style="color: #0c2340; font-size: 15px; font-weight: 800; letter-spacing: -0.2px; line-height: 1.5;">
           Upcoming Competition: Preparation for the Military City Collegiate.
         </div>
-        <div style="color: #64748b; font-size: 14px; font-weight: 600; line-height: 1.4;">
+        <div style="color: #64748b; font-size: 14px; font-weight: 600; line-height: 1.5;">
           Current Academic & Physical Focus: Coursework and recovery protocols aligned with back-to-back tournament scheduling.
         </div>
       </div>
     </div>
-    <div class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #e2e8f0; background: #ffffff; transition: 0.2s; box-sizing: border-box;">
+
+    <div class="focus-arrow-svg" style="display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 10px; border: 2px solid #e2e8f0; background: #ffffff; transition: 0.2s; box-sizing: border-box; flex-shrink: 0;">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
         <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
       </svg>
     </div>
-  </a>
+</a>
      
 </div>
 
